# RefBox

./: .gitignore  README.md
AudienceClient/: AudienceClient.pro  CMakeLists.txt  ConfigXML.cpp  ConfigXML.h  README.md  Team.h  main.cpp  mainwindow.cpp  mainwindow.h
AudienceClient/AudienceClient/: AudienceClient.pro  CMakeLists.txt  FieldWidget3D.cpp  FieldWidget3D.h  Param.cpp  Param.h  Team.h  controlpanel.cpp  controlpanel.h  controlpanel.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
AudienceClient/AudienceClient/playback/: bsearch.py  logMapping.py  matchStatistics.py  matchlog.py  playbackControl.py  playbackMatchlog.py
AudienceClient/AudienceClient/playback/pgu/: PKG-INFO
AudienceClient/AudienceClient/playback/pgu/docs/: algo.html  gui.menus.html  gui.slider.html  gui.surface.html  gui.theme.html  gui1.html  gui5.html  html.html  index.html  levelfancy.html  text.html  tilevid3.html
AudienceClient/CMakeModules/: FindXERCESC.cmake
AudienceClient/config/: field.conf.cxx  field.conf.xml  score_board.xcf
LogFileAnalyzer/: README.md
RefereeClient/: Comms.pde  Config.pde  Log.pde  Misc.pde  RefereeClient.pde  Robot.pde  SystemEvents.pde  Team.pde  UDP.java  enums.java
RefereeClient/data/: config.json
config/: field.conf.hxx  field.conf.xsd  textoverlay_bg.xcf
mslrb2015/: AutoReferee.pde  BSliders.pde  Button.pde  Comms.pde  Comms3114244416210364759.autosave  Config.pde  Exporter.pde  Log.pde  LogMerger.pde  MSLRemote.pde  Misc.pde  MyServer.java  Popup.pde  RefreshButon.pde  RefreshButon5408860871915498609.autosave  Robot.pde  ScoreClients.pde  StateMachine.pde  SystemEvents.pde  Team.pde  TeamTableBuilder.pde  Textbox.pde  UDP.java  enums.java  fonts.txt  gui.pde  mslrb2015.pde  stopWatch.pde
mslrb2015/GUI_BUILDER_DATA/: gui.ser.4.1
mslrb2015/data/: .gitignore  config.json  config.txt  msl_teams.csv  msl_teams.json
(+61 files in other folders)
